<resources>
    <string name="app_name">carShop</string>
    <string name="carShop">Автосалон</string>
    <string name="cart">Корзина</string>
    <string name="arrow_left">Стрелка влево</string>
    <string name="arrow_right">Стрелка вправо</string>
    <string name="chooseYourCar">Выберите пожалуйста автомобиль</string>
    <string name="porsche_911">Porsche 911 Carrera</string>
    <string name="porsche_cayenne">Porsche Cayenne</string>
    <string name="porsche_taycan">Porsche Taycan</string>
    <string name="car">Машина:</string>
    <string name="price">Цена:</string>
    <string name="characteristics">Краткие характеристики:</string>
    <string name="porsche_911_price_value">109290</string>
    <string name="porsche_cayenne_price_value">75683</string>
    <string name="porsche_taycan_price_value">88454</string>
    <string name="dollars">$</string>
    <string name="body_type">Тип кузова:</string>
    <string name="years_of_issue">Год выпуска:</string>
    <string name="power">Мощность, л.с :</string>
    <string name="engine_volume">Объем двигателя, куб.см :</string>
    <string name="acceleration">Разгон до 100 км/ч, с :</string>
    <string name="jeep">внедорожник</string>
    <string name="sedan">седан</string>
    <string name="porsche_911_year">2015</string>
    <string name="porsche_cayenne_year">2017</string>
    <string name="porsche_taycan_year">2019</string>
    <string name="porsche_911_volume">2981</string>
    <string name="porsche_cayenne_volume">2955</string>
    <string name="porsche_taycan_volume">эл./0</string>
    <string name="porsche_911_power_value">370</string>
    <string name="porsche_cayenne_power_value">340</string>
    <string name="porsche_taycan_power_value">326</string>
    <string name="porsche_911_acceleration_value">4.4</string>
    <string name="porsche_cayenne_acceleration_value">6.2</string>
    <string name="porsche_taycan_acceleration_value">5.4</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="send_mail">Отправить заказ на почту</string>
    <string name="order">Ваш заказ:</string>

</resources>