<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:contentDescription="@string/carShop"
        android:scaleType="centerCrop"
        android:src="@drawable/autosalon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/chooseYourCar"
        android:textAlignment="center"
        android:textColor="@color/headingColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/arrowLeft"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/arrow_left"
            android:scaleType="centerCrop"
            android:src="@drawable/arrow_left" />

        <ImageView
            android:id="@+id/car"
            android:layout_width="240dp"
            android:layout_height="170dp"
            android:contentDescription="@string/car"
            android:scaleType="centerCrop"
            android:src="@drawable/porsche_911_carrera" />

        <ImageButton
            android:id="@+id/arrowRight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/arrow_right"
            android:scaleType="centerCrop"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

    <TextView
        android:id="@+id/carName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:text="@string/porsche_911"
        android:textAlignment="center"
        android:textColor="@color/carNameColor"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:text="@string/price"
            android:textColor="@color/headingColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:text="@string/characteristics"
            android:textColor="@color/headingColor"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/carPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:text="@string/porsche_911_price_value"
            android:textColor="@color/priceColor"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dollars"
            android:textColor="@color/priceColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="85dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_type"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/body_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/sedan"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/years_of_issue"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/carYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:text="@string/porsche_911_year"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/power"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/carPowerValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/porsche_911_power_value"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/engine_volume"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/carVolume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/porsche_911_volume"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acceleration"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/carAccelerationValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:text="@string/porsche_911_acceleration_value"
                    android:textColor="@color/typeOfCharacteristicsColor"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/addToCart"
        android:layout_width="370dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/add_to_cart"

        />


</LinearLayout>