<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".CartActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/headingColor"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_height="230dp"
        app:cardCornerRadius="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/orderImage"
                    android:layout_marginStart="5dp"
                    android:layout_width="200dp"
                    android:layout_height="170dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/orderCarName"
                        android:textColor="@color/carNameColor"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginBottom="10dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:text="@string/body_type"/>

                        <TextView
                            android:id="@+id/orderBodyType"
                            android:layout_marginStart="2dp"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:text="@string/years_of_issue"/>

                        <TextView
                            android:id="@+id/orderYear"
                            android:layout_marginStart="2dp"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:text="@string/power"/>

                        <TextView
                            android:id="@+id/orderPower"
                            android:layout_marginStart="2dp"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:text="@string/engine_volume" />

                        <TextView
                            android:id="@+id/orderEngineVolume"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="14dp"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:layout_marginTop="18dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:text="@string/acceleration"/>

                        <TextView
                            android:id="@+id/orderAcceleration"
                            android:layout_marginStart="2dp"
                            android:textColor="@color/typeOfCharacteristicsColor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/carNameColor"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/orderPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/priceColor"
                    android:textAlignment="center"
                    android:layout_marginStart="150dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/dollars"
                    android:textColor="@color/priceColor" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/sendMail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/send_mail" />


</LinearLayout>